[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[tool.corio.metadata]
version = "0.3.4-alpha003"
port = 6
base = "python"
description = "Home Assistant Control Objects"
org_github = "fmtr"
org_friendly = "Frontmatter AI"
is_client = false
scripts = []
services = []
keywords = ["homeassistant", "controls", "python", "tasmota"]
is_pypi = true
is_dockerhub = false

[[tool.corio.metadata.docs.nav]]
Home = "index.md"

[[tool.corio.metadata.docs.nav]]
"Quick Start" = "quick-start.md"

[[tool.corio.metadata.docs.nav]]
"Control Types" = "controls.md"

[[tool.corio.metadata.docs.nav]]
Changelog = "changelog/"

[tool.corio.metadata.setup]

[tool.setuptools.packages.find]
where = ["."]
include = ["haco*"]
namespaces = false

[tool.setuptools.package-data]
haco = ["pyproject.package.toml"]

[tool.uv.sources.corio]
path = "../corio"
editable = true

[project]
name = "haco"
version = "0.3.4-alpha003"
description = "Home Assistant Control Objects"
readme = "README.md"
license = "Apache-2.0"
keywords = ["homeassistant", "controls", "python", "tasmota"]
dependencies = ["corio", "corio[version.dev,logging,sets,yaml,debug,caching,api,mqtt]", "psutil"]

[[project.authors]]
name = "Frontmatter AI"
email = "innovative.fowler@mask.pro.fmtr.dev"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.urls]
Homepage = "https://github.com/fmtr/haco"

[project.scripts]
